School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/invalid/OwnTests_stepA/invalid/parser/wrong_parent.deca
{
    if(4{
        int x = 2;
    }
}